--- a/tendies-exchange-ui/styles.css
+++ b/tendies-exchange-ui/styles.css
@@ -1,7 +1,6 @@
 /* Colors https://coolors.co/f1e8b8-f9e784-e58f65-d05353-191919 */
 body {
-  font-family: 'Roboto', 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
+  font-family:  "Courier", monospace, monospace;
   background-color: #191919;
   color: white;
   margin: 0;
@@ -9,4 +8,8 @@ body {
 
 a {
   color: white;
+}
+
+h3 {
+  font-size: 1.15em;
 }
